Removed inner methods that will be deprecated in java 11.